css overflow issues fixed

--- a/styles.css
+++ b/styles.css
@@ -36,15 +36,35 @@ body {
     filter: blur(75px);
 }
 
-#red-light {
+/* hezky clanek o tohmle owerflow a o tom do toho obrazku s kamrou dole */
+.big-div {
     position: absolute;
-    width: 164px;
+    width: 80px;
     height: 153px;
     left: 295px;
     top: 354px;
+}
 
+.red-dot {
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    height: 153px;
     background: rgba(223, 48, 88, 0.45);
     filter: blur(50px);
+    z-index: 0;
+    
+}
+
+#red-light {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    top: 60px;
+    right: -10px;
+    background: rgba(223, 48, 88, 0.65);
+    filter: blur(5px);
+    z-index: 1;
 }
 
 header {
@@ -91,6 +111,7 @@ header {
     justify-content: space-around;
     list-style: none;
     flex-wrap: wrap;
+    margin: 0 20px;
 }
 
 .nav-link {
@@ -139,13 +160,13 @@ p {
     align-items: center;
 }
 
-#hero-camera-lower {
+.hero-camera-lower {
     margin: 30px 0;
-
-    /* this is whats croppes image */
-    height: 305px;
-    width: 170%;
-    object-fit: cover;
+    background-image: url(./Images/pexels-achim-f-3526906.jpg);
+    height: 310px;
+    width: 100%;
+    background-size: 630px auto;
+    background-position: center center;
 }
 
 #what-we-offer h1 {
@@ -153,8 +174,25 @@ p {
     margin-bottom: 32px;
 }
 
+#dark-box {
+    width: 92%;
+    padding: 4% 0;;
+    background: #111111;
+    border-radius: 35px;
+}
+
 .img-card {
-    background-color: burlywood;
+    width: 80%;
+    aspect-ratio: 43/50;
+    margin: 17px 0;
+    border-radius: 25px;
+}
+
+#black-overlay-video {
+    background-image: url(./Images/pexels-bruno-massao-2095594.jpg);
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
 }
 
 p {
@@ -163,4 +201,21 @@ p {
     line-height: 110%;
     color: rgba(255, 255, 255, 0.7);
     text-align: justify;
+}
+
+iframe {
+    width: 100%;
+    aspect-ratio: 16/9;
+
+}
+
+#your-name, #subject, #email {
+    width: 100%;
+    border-radius: 10px;
+    border: 1px solid white;
+    padding: 10px;
+    font-size: 16px;
+    line-height: 110%;
+    color: rgba(255, 255, 255, 0.7);
+    background-color: black;
 }
